# WebScrapBlackFriday

./: .gitignore  README.md  app.py  pyproject.toml
